--- a/test.html
+++ b/test.html
@@ -179,6 +179,7 @@
             <span class="option-text">3 - Я чувствую, что как личность я - полный неудачник.</span>
         </label>
         <button onclick="nextQuestion(3)">Далее</button>
+        </div>
         <div id="question4" class="question-container">
         <div class="question">4. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -198,6 +199,7 @@
             <span class="option-text">3 - Я чувствую, что как личность я - полный неудачник.</span>
         </label>
             <button onclick="nextQuestion(4)">Далее</button>
+            </div>
                 <div id="question5" class="question-container">
         <div class="question">5. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -217,6 +219,7 @@
             <span class="option-text">3 - Я постоянно испытываю чувство вины. </span>
         </label>
                     <button onclick="nextQuestion(5)">Далее</button>
+                    </div>
                         <div id="question6" class="question-container">
         <div class="question">6. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -236,6 +239,7 @@
             <span class="option-text">3 - Я чувствую себя уже наказанным. </span>
         </label>
                             <button onclick="nextQuestion(6)">Далее</button>
+                            </div>
                                 <div id="question7" class="question-container">
         <div class="question">7. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -255,6 +259,7 @@
             <span class="option-text">3 - Я себя ненавижу. </span>
         </label>
                                     <button onclick="nextQuestion(7)">Далее</button>
+                                    </div>
                                         <div id="question8" class="question-container">
         <div class="question">8. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -274,6 +279,7 @@
             <span class="option-text">3 - Я виню себя во всем плохом, что происходит. </span>
         </label>
                                             <button onclick="nextQuestion(8)">Далее</button>
+                                            </div>
                                                 <div id="question9" class="question-container">
         <div class="question">9. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -293,6 +299,7 @@
             <span class="option-text">3 - Я бы убил себя, если бы представился случай. </span>
         </label>
                                                     <button onclick="nextQuestion(9)">Далее</button>
+                                                    </div>
                                                         <div id="question10" class="question-container">
         <div class="question">10. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -312,6 +319,7 @@
             <span class="option-text">3 - Раньше я мог плакать, а сейчас не могу, даже если мне хочется. </span>
         </label>
                                                             <button onclick="nextQuestion(10)">Далее</button>
+                                                            </div>
                                                                 <div id="question11" class="question-container">
         <div class="question">11. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -331,6 +339,7 @@
             <span class="option-text">3 - Я стал равнодушен к вещам, которые меня раньше раздражали. </span>
         </label>
                                                                     <button onclick="nextQuestion(11)">Далее</button>
+                                                                    </div>
                                                                         <div id="question12" class="question-container">
         <div class="question">12. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -350,6 +359,7 @@
             <span class="option-text">3 - Я полностью утратил интерес к другим людям.</span>
         </label>
                                                                             <button onclick="nextQuestion(12)">Далее</button>
+                                                                            </div>
                                                                                 <div id="question13" class="question-container">
         <div class="question">13. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -369,6 +379,7 @@
             <span class="option-text">3 - Мне труднее принимать решения, чем раньше. </span>
         </label>
                                                                                     <button onclick="nextQuestion(13)">Далее</button>
+                                                                                    </div>
                                                                                         <div id="question14" class="question-container">
         <div class="question">14. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -388,6 +399,7 @@
             <span class="option-text">3 - Я знаю, что выгляжу безобразно. </span>
         </label>
                                                                                             <button onclick="nextQuestion(14)">Далее</button>
+                                                                                            </div>
                                                                                                 <div id="question15" class="question-container">
         <div class="question">15. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -407,6 +419,7 @@
             <span class="option-text">3 - Я совсем не могу выполнять никакую работу.</span>
         </label>
                                                                                                     <button onclick="nextQuestion(15)">Далее</button>
+                                                                                                    </div>
                                                                                                         <div id="question16" class="question-container">
         <div class="question">16. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -426,6 +439,7 @@
             <span class="option-text">3 - Я просыпаюсь на несколько часов раньше обычного и больше не могу заснуть.</span>
         </label>
                                                                                                             <button onclick="nextQuestion(16)">Далее</button>
+                                                                                                            </div>
                                                                                                                 <div id="question17" class="question-container">
         <div class="question">17. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -444,7 +458,8 @@
             <input type="radio" name="q17" value="3">
             <span class="option-text">3 - Я не могу ничего делать из-за усталости.</span>
         </label> 
-         <button onclick="nextQuestion(17)">Далее</button>                                                                                                           
+         <button onclick="nextQuestion(17)">Далее</button>  
+        </div>
                                                                                                                         <div id="question18" class="question-container">
         <div class="question">18. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -463,7 +478,8 @@
             <input type="radio" name="q18" value="3">
             <span class="option-text">3 - Я чувствую, что как личность я - полный неудачник.</span>
         </label>
-                                                                                                                            <button onclick="nextQuestion(18)">Далее</button>
+                                                                                                                            <button onclick="nextQuestion(18)">Далее</button> 
+        </div>
                                                                                                                                 <div id="question19" class="question-container">
         <div class="question">19. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -483,6 +499,7 @@
             <span class="option-text">3 - Я потерял более 7 кг.</span>
         </label>
                                                                                                                                     <button onclick="nextQuestion(19)">Далее</button>
+                                                                                                                                    </div>
                                                                                                                                         <div id="question20" class="question-container">
         <div class="question">20. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -502,6 +519,7 @@
             <span class="option-text">3 - Я настолько обеспокоен своим физическим состоянием, что больше ни о чем не могу думать. </span>
         </label>
                                                                                                                                             <button onclick="nextQuestion(20)">Далее</button>
+                                                                                                                                            </div>
                                                                                                                                                 <div id="question21" class="question-container">
         <div class="question">21. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
