--- a/test.html
+++ b/test.html
@@ -4,21 +4,14 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Тест на уровень депрессии</title>
+<link rel="stylesheet" href="style.css" />
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-    line-height: 1.6;
-  }
 
   .question-container {
     background: #fff;
     padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    border-radius: 45px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
     margin-bottom: 20px;
     display: none;
   }
