--- a/test.html
+++ b/test.html
@@ -180,7 +180,12 @@
   <p id="result-description"></p>
   <button onclick="restartTest()">Пройти заново</button>
 </div>
-
+<!-- Нижняя панель с иконками без фона -->
+<div class="bottom-nav">
+ <button class="icon-btn"><i class="fas fa-cog"></i></button>
+ <button class="icon-btn"><i class="fas fa-search"></i></button>
+ <button class="icon-btn"><i class="fas fa-user"></i></button>
+</div>
 <script>
   const totalQuestions = 3; // Общее число вопросов
   const answers = {};
