--- a/test.html
+++ b/test.html
@@ -37,14 +37,18 @@
 .icon-btn :active { /* можно оставить так для эффекта наведения и нажатия одновременно */   
    background-color : rgba(144,128,208,1);
 }
-  .question-container {
+.question-container {
     background: #fff;
     padding: 30px;
     border-radius: 45px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     margin-bottom: 20px;
     display: none;
-  }
+    width: 345px;   /* Устанавливаем ширину */
+    height: 420px;   /* Устанавливаем высоту */
+    box-sizing: border-box; /* Обеспечит, что padding входит в размеры */
+}
+
   .question-container.active {
     display: block;
   }
