--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
     font-weight: bold;
   }
 
-  .option {
+.option {
     margin: 15px 0;
     padding: 12px;
     background: #f9f9f9;
@@ -68,7 +68,11 @@
     display: block;
     position: relative;
     padding-left: 40px;
-  }
+    width: 345px;
+    height: 90px;
+    box-sizing: border-box;
+}
+
   .option:hover {
     background: #e9e9e9;
   }
