--- a/test.html
+++ b/test.html
@@ -9,6 +9,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
  
 <style>
+ /* Иконка стрелки справа */
+.arrow-icon {
+    margin-left:15px; /* Расстояние между текстом и стрелкой */
+    color: #fff;
+}
 .bottom-nav {
   display:flex; 
   justify-content:space-around; 
