--- a/test.html
+++ b/test.html
@@ -78,7 +78,7 @@
 }
 
   .option:hover {
-    background: #e9e9e9;
+   background-color : rgba(144,128,208,1);
   }
   .option input {
     position: absolute;
