--- a/test.html
+++ b/test.html
@@ -61,7 +61,8 @@
     align-items: center; /* вертикальное выравнивание */
     margin: 15px 0;
     padding: 12px;
-    background: #f9f9f9;
+  background-color: rgba(176, 160, 224, 1);
+ box-shadow: 0 4px 8px rgba(0,0,0,0.5);
     border-radius: 45px;
     cursor: pointer;
     padding-left: 10px; /* небольшой отступ слева для текста */
