--- a/test.html
+++ b/test.html
@@ -90,7 +90,7 @@
 
   button {
     padding: 12px 20px;
-    background: #4CAF50;
+    background-color: rgba(255, 255, 255, 0.5);
     color: white;
     border: none;
     border-radius: 5px;
