--- a/test.html
+++ b/test.html
@@ -101,7 +101,7 @@
     width: 100%;
   }
   button:hover {
-    background: #45a049;
+  background-color : rgba(144,128,208,1);
   }
 
   #result-container {
