--- a/test.html
+++ b/test.html
@@ -38,6 +38,10 @@
    background-color : rgba(144,128,208,1);
 }
 .question-container {
+    background: #fff;
+    padding: 30px;
+    border-radius: 45px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
     margin-bottom: 20px;
     display: none;
     width: 345px;   /* ширина блока */
@@ -61,7 +65,7 @@
     align-items: center; /* вертикальное выравнивание */
     margin: 15px 0;
     padding: 12px;
- background-color: rgba(255, 255, 255, 0.5);
+ background-color: rgba(176, 160, 224, 1);
  box-shadow: 0 4px 8px rgba(0,0,0,0.5);
     border-radius: 45px;
     cursor: pointer;
