--- a/test.html
+++ b/test.html
@@ -4,11 +4,18 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Тест на уровень депрессии</title>
-<link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
- 
+
 <style>
+/* Общие стили */
+body {
+  font-family: 'Comfortaa', sans-serif;
+  background-color: #f0f0f0;
+  padding: 20px;
+}
+
+/* Прогресс-бар */
 .bottom-nav {
   display:flex; 
   justify-content:space-around; 
@@ -34,25 +41,23 @@
 }
 
 .icon-btn:hover,
-.icon-btn :active { /* можно оставить так для эффекта наведения и нажатия одновременно */   
+.icon-btn :active {   
    background-color : rgba(144,128,208,1);
 }
+
+/* Контейнер вопроса */
 .question-container {
-    background: #fff;
-    padding: 30px;
-    border-radius: 45px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
     margin-bottom: 20px;
     display: none;
-    width: 345px;   /* ширина блока */
-    height: auto;   /* высота по содержимому */
-    box-sizing: border-box; /* включает padding в размеры */
+    width: 345px;
+    box-sizing: border-box;
 }
 
 .question-container.active {
     display: block;
 }
 
+/* Вопрос */
 .question {
     font-size: 18px;
     margin-bottom: 20px;
@@ -61,134 +66,194 @@
 
 /* Варианты ответа */
 .option {
-    display: flex; /* размещение элементов по горизонтали */
-    align-items: center; /* вертикальное выравнивание */
+    display: flex;
+    align-items: center;
     margin: 15px 0;
-    padding: 12px;
- background-color: rgba(176, 160, 224, 1);
- box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    width: 345px; /* ширина блока */
+    height: 90px; /* высота блока */
+    background-color: rgba(176, 160, 224, 1);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.5);
     border-radius: 45px;
     cursor: pointer;
-    padding-left: 10px; /* небольшой отступ слева для текста */
+    padding-left: 10px; /* отступ слева */
+    box-sizing: border-box;
 }
 
 /* Радио кнопка внутри .option */
 .option input[type="radio"] {
     margin-right: 15px; /* отступ между радиокнопкой и текстом */
+    flex-shrink: 0; /* чтобы радио не сжималось */
 }
 
-/* Можно добавить стили для текста внутри label, если нужно */
+/* Метка для текста варианта ответа */
+.option label {
+    display: flex;
+    align-items: center;
+    width: calc(100% - 30px); /* занимает всё пространство кроме радиокнопки и отступа */
+}
+
+/* Текст внутри варианта ответа */
 .option span {
     font-size: 16px;
-}
-
-  .option:hover {
-   background-color : rgba(144,128,208,1);
-  }
-  .option input {
-    position: absolute;
-    left: 10px;
-    top: 15px;
-    cursor: pointer;
-  }
-
-  button {
-    padding: 12px 20px;
-    background-color: rgba(255, 255, 255, 0.5);
-    color: white;
-    border: none;
-    border-radius: 45px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 20px;
     display: block;
     width: 100%;
-  }
-  button:hover {
-  background-color : rgba(144,128,208,1);
-  }
+    overflow-wrap: break-word; /* перенос слов при необходимости */
+}
 
-  #result-container {
-    display: none;
-    background: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
+/* Эффект при наведении на вариант */
+.option:hover {
+   background-color : rgba(144,128,208,1);
+}
 
-  .result-score {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 20px 0;
-  }
+/* Стили для кнопки "Далее" */
+button {
+    padding: 12px 20px;
+    background-color: rgba(255,255,255,0.5);
+    color:#fff;
+    border:none;
+    border-radius:45px;
+    cursor:pointer;
+    font-size:16px;
+    margin-top:20px;
+    display:block;
+    width:auto; /* можно оставить auto или задать фиксированную ширину */
+}
+button:hover {
+   background-color : rgba(144,128,208,1);
+}
 
-  .diagnosis {
-    padding: 15px;
-    border-radius: 5px;
-    margin: 20px 0;
-    font-weight: bold;
-  }
+/* Контейнер результата (скрыт по умолчанию) */
+#result-container {
+    display:none;
+    background:#fff;
+    padding:30px;
+    border-radius:10px;
+    box-shadow:0 0 10px rgba(0,0,0,0.1);
+}
+.result-score {
+    font-size:24px;
+    font-weight:bold;
+}
+.diagnosis {
+    padding:15px;
+    border-radius:5px;
+    margin-top:-10px; /* чуть ближе к результату */
+}
+.mild { background:#FFF3CD; color:#856404;}
+.moderate { background:#FFE0A3; color:#D35400;}
+.severe { background:#F8D7DA; color:#721C24;}
 
-  .mild {
-    background-color: #FFF3CD;
-    color: #856404;
-  }
-  .moderate {
-    background-color: #FFE0A3;
-    color: #D35400;
-  }
-  .severe {
-    background-color: #F8D7DA;
-    color: #721C24;
-  }
-  .progress-bar {
-    height: 5px;
-    background: #e0e0e0;
-    margin-bottom: 20px;
-    border-radius: 5px;
-  }
-  .progress {
-    height: 100%;
-    background: #4CAF50;
-    border-radius: 5px;
-    width: 0%;
-    transition: width 0.3s;
-  }
+.progress-bar {
+   height :5px; 
+   background:#e0e0e0; 
+   margin-bottom :20px ; 
+   border-radius :5px ;
+}
+.progress {
+   height :100%; 
+   background:#4CAF50 ; 
+   width :0%; 
+   transition :width .3s ;
+}
 </style>
 </head>
 <body>
 
 <div class="progress-bar">
-  <div class="progress" id="progress"></div>
+ <div class="progress" id="progress"></div>
 </div>
 
 <!-- Вопросы -->
 <div id="question1" class="question-container active">
-  <div class="question">1. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
-  <div class="option"><label><input type="radio" name="q1" value="0"> Я не чувствую себя расстроенным, печальным.</label></div>
-  <div class="option"><label><input type="radio" name="q1" value="1"> Я расстроен.</label></div>
-  <div class="option"><label><input type="radio" name="q1" value="2"> Я всё время расстроен и не могу от этого отключиться.</label></div>
-  <div class="option"><label><input type="radio" name="q1" value="3"> Я настолько расстроен и несчастлив, что не могу это выдержать.</label></div>
-  <button onclick="nextQuestion(1)">Далее</button>
+ <div class="question">1. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
+ <div class="option">
+   <input type="radio" name="q1" value="0" id="q1a1"/>
+   <label for="q1a1"><span>Я не чувствую себя расстроенным, печальным.</span></label>
+ </div>
+ <div class="option">
+   <input type="radio" name="q1" value="1" id="q1a2"/>
+   <label for="q1a2"><span>Я расстроен.</span></label>
+ </div>
+ <div class="option">
+   <input type="radio" name="q1" value="2" id="q1a3"/>
+   <label for="q1a3"><span>Я всё время расстроен и не могу от этого отключиться.</span></label>
+ </div>
+ <div class="option">
+   <input type="radio" name="q1" value="3" id="q1a4"/>
+   <label for="q1a4"><span>Я настолько расстроен и несчастлив, что не могу это выдержать.</span></label>
+ </div>
+ <button onclick="nextQuestion(1)">Далее</button>
 </div>
+
 <div id="question2" class="question-container">
-  <div class="question">2. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
-  <div class="option"><label><input type="radio" name="q2" value="0"> Я не тревожусь о своем будущем.</label></div>
-  <div class="option"><label><input type="radio" name="q2" value="1"> Я чувствую, что озадачен будущим.</label></div>
-  <div class="option"><label><input type="radio" name="q2" value="2"> Я чувствую, что меня ничего не ждет в будущем.</label></div>
-  <div class="option"><label><input type="radio" name="q2" value="3"> Мое будущее безнадежно, и ничто не может измениться к лучшему.</label></div>
-  <button onclick="nextQuestion(2)">Далее</button>
+ <div class="question">2. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
+ <div class="option">
+   <input type='radio' name='q2' value='0' id='q2a1'/>
+   <label for='q2a1'><span>Я не тревожусь о своем будущем.</span></label>
+ </div>
+ <div class='option'>
+   <input type='radio' name='q2' value='1' id='q2a2'/>
+   <label for='q2a2'><span>Я чувствую, что озадачен будущим.</span></label>
+ </div>
+ <div class='option'>
+   <input type='radio' name='q2' value='2' id='q2a3'/>
+   <label for='q2a3'><span>Я чувствую, что меня ничего не ждет в будущем.</span></label>
+ </div>
+ <div class='option'>
+   <input type='radio' name='q2' value='3' id='q2a4'/>
+   <label for='q2a4'><span>Мое будущее безнадежно, и ничто не может измениться к лучшему.</span></label>
+ </div>
+ <button onclick='nextQuestion(2)'>Далее</button>
 </div>
-<!-- Повторите для всех вопросов -->
-<!-- Например, вопрос 3 -->
-<div id="question3" class="question-container">
-  <div class="question">3. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
-  <div class="option"><label><input type="radio" name="q3" value="0"> Я не чувствую себя неудачником.</label></div>
-  <div class="option"><label><input type="radio" name="q3" value="1"> Я чувствую, что терпел больше неудач, чем другие люди</label></div>
-  <div class="option"><label><input type="radio" name="q3" value="2"> Когда я оглядываюсь на свою жизнь, я вижу в ней много неудач.</label></div>
-  <div class="option"><label><input type="radio" name="q3" value="3"> Я чувствую, что как личность я — полный неудачник.</label></div>
-  <button onclick="nextQuestion(3)">Далее</button>
+
+<!-- Можно добавить остальные вопросы по аналогии -->
+
+<!-- Например вопрос №3 -->
+<div id='question3' class='question-container'>
+<div class='question'>3. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
+<div class='option'>
+<input type='radio' name='q3' value='0' id='q3a1'/>
+<label for='q3a1'><span>Я не чувствую себя неудачником.</span></label>
 </div>
+<div class='option'>
+<input type='radio' name='q3' value='1' id='q3a2'/>
+<label for='q3a2'><span>Я чувствую, что терпел больше неудач, чем другие люди</span></label>
+</div>
+<div class='option'>
+<input type='radio' name='q3' value='2' id='q3a3'/>
+<label for='q3a3'><span>Когда я оглядываюсь на свою жизнь, я вижу в ней много неудач.</span></label>
+</div>
+<div class='option'>
+<input type='radio' name='q3' value='3' id='q3a4'/>
+<label for='q3a4'><span>Я чувствую, что как личность я — полный неудачник.</span></label>
+</div>
+<button onclick='nextQuestion(3)'>Далее</button>
+</div>
+
+<!-- Скрипт для переключения вопросов -->
+<script>
+// Переключение вопросов
+function nextQuestion(currentNumber) {
+ const currentId = 'question'+currentNumber;
+ const nextId = 'question'+(currentNumber+1);
+ document.getElementById(currentId).classList.remove('active');
+ const nextQuestion = document.getElementById(nextId);
+ if(nextQuestion){
+     nextQuestion.classList.add('active');
+ }
+ // Обновление прогресс-бара
+ const progress = document.getElementById('progress');
+ let percent = (currentNumber / totalQuestions) *100 ;
+ progress.style.width = percent + '%';
+}
+
+// Общее количество вопросов
+const totalQuestions = 3;
+
+</script>
+
+</body>
+</html>
 <!-- Контейнер результатов -->
 <div id="result-container">
   <h2>Результаты теста</h2>
