--- a/test.html
+++ b/test.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Тест на депрессию</title>
+  <!-- Подключение Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+
+<!-- Подключение шрифта Comfortaa -->
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
+
+<!-- Внешний CSS -->
+<link rel="stylesheet" href="style.css" />
 <style>
 /* Общие стили */
 body {
