--- a/test.html
+++ b/test.html
@@ -2,16 +2,12 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Тест на депрессию</title>
-  <!-- Подключение Font Awesome -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Тест на уровень депрессии</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link rel="stylesheet" href="style.css" />
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 
-<!-- Подключение шрифта Comfortaa -->
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
-
-<!-- Внешний CSS -->
-<link rel="stylesheet" href="style.css" />
 <style>
 /* Общие стили */
 body {
@@ -164,15 +160,10 @@ button:hover {
 </head>
 <body>
 
-<h2>Тест на депрессию</h2>
-
-<div class="progress-container">
-  <div id="progress"></div>
+<div class="progress-bar">
+ <div class="progress" id="progress"></div>
 </div>
 
-<div id="questions-container">
-  
-  <!-- Вопросы -->
 <!-- Вопросы -->
 <div id="question1" class="question-container active">
  <div class="question">1. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
@@ -192,6 +183,7 @@ button:hover {
    <input type="radio" name="q1" value="3" id="q1a4"/>
    <label for="q1a4"><span>Я настолько расстроен и несчастлив, что не могу это выдержать.</span></label>
  </div>
+ <button onclick="nextQuestion(1)">Далее</button>
 </div>
 
 <div id="question2" class="question-container">
@@ -212,6 +204,7 @@ button:hover {
    <input type='radio' name='q2' value='3' id='q2a4'/>
    <label for='q2a4'><span>Мое будущее безнадежно, и ничто не может измениться к лучшему.</span></label>
  </div>
+ <button onclick='nextQuestion(2)'>Далее</button>
 </div>
 
 <!-- Можно добавить остальные вопросы по аналогии -->
@@ -235,110 +228,102 @@ button:hover {
 <input type='radio' name='q3' value='3' id='q3a4'/>
 <label for='q3a4'><span>Я чувствую, что как личность я — полный неудачник.</span></label>
 </div>
+<button onclick='nextQuestion(3)'>Далее</button>
 </div>
-
-<!-- Контейнер для результата -->
-<div id='result-container'>
-<h3>Результат теста:</h3>
-<p id='diagnosis-text'></p>
-<button onclick='restartTest()'>Пройти заново</button>
+</body>
+</html>
+<!-- Контейнер результатов -->
+<div id="result-container">
+  <h2>Результаты теста</h2>
+  <div class="result-score">Ваш результат: <span id="total-score">0</span></div>
+  <div class="diagnosis" id="diagnosis-text"></div>
+  <p id="result-description"></p>
+  <button onclick="restartTest()">Пройти заново</button>
 </div>
-
+<!-- Нижняя панель с иконками без фона -->
+<div class="bottom-nav">
+ <button class="icon-btn"><i class="fas fa-cog"></i></button>
+ <button class="icon-btn"><i class="fas fa-search"></i></button>
+ <button class="icon-btn"><i class="fas fa-user"></i></button>
+</div>
 <script>
-// Объявляем переменные
-const totalQuestions =3; // всего вопросов
-let currentQuestion=1; // текущий вопрос
-const scores=[]; // массив для хранения баллов
+  const totalQuestions = 3; // Общее число вопросов
+  const answers = {};
 
-// Инициализация при загрузке страницы
-window.onload = () => {
- updateProgress();
- setupAutoNext(1);
- setupAutoNext(2);
- setupAutoNext(3);
-};
+  function nextQuestion(questionNumber) {
+    const selected = document.querySelector(`input[name=q${questionNumber}]:checked`);
+    if (!selected) {
+      alert('Пожалуйста, выберите вариант ответа');
+      return;
+    }
+    answers[`q${questionNumber}`] = parseInt(selected.value);
+    document.getElementById(`question${questionNumber}`).style.display = 'none';
 
-// Функция для установки обработчика автоматического перехода
-function setupAutoNext(questionNumber) {
- const radios = document.querySelectorAll(`input[name=q${questionNumber}]`);
- radios.forEach(radio => {
-   radio.addEventListener('change', () => {
-     nextQuestion();
-   });
- });
-}
+    if (questionNumber < totalQuestions) {
+      const nextQ = questionNumber + 1;
+      document.getElementById(`question${nextQ}`).style.display = 'block';
+      updateProgress(nextQ);
+    }
+  }
 
-// Обновление прогресс-бара
-function updateProgress() {
- const progressElem = document.getElementById("progress");
- const progressPercent = ((currentQuestion -1) / totalQuestions) *100;
- progressElem.style.width = progressPercent + "%";
-}
+  function updateProgress(currentQuestion) {
+    const progressPercent = (currentQuestion / totalQuestions) * 100;
+    document.getElementById('progress').style.width = progressPercent + '%';
+  }
 
-// Показать следующий вопрос или финал
-function nextQuestion() {
- // Получаем выбранный ответ
- const selectedRadio = document.querySelector(`input[name=q${currentQuestion}]:checked`);
- if (!selectedRadio) {
-   alert("Пожалуйста, выберите ответ");
-   return; // если ответ не выбран, не переходим дальше
- }
- const answerScore = parseInt(selectedRadio.value);
- scores[currentQuestion -1]=answerScore;
+  function showResults() {
+    let totalScore = 0;
+    for (let i = 1; i <= totalQuestions; i++) {
+      totalScore += answers[`q${i}`] || 0;
+    }
+    document.getElementById('total-score').textContent = totalScore;
 
- // Снимаем активность с текущего вопроса
- document.getElementById(`question${currentQuestion}`).classList.remove('active');
+    // Определение диагноза
+    let diagnosis, description;
+    if (totalScore <= 9) {
+      diagnosis = "Отсутствие депрессии";
+      description = "Ваши результаты не указывают на наличие депрессивных симптомов.";
+    } else if (totalScore <= 15) {
+      diagnosis = "Легкая депрессия";
+      description = "У вас могут быть некоторые симптомы депрессии. Рекомендуется обратить внимание на свое эмоциональное состояние.";
+    } else if (totalScore <= 19) {
+      diagnosis = "Умеренная депрессия";
+      description = "Ваши результаты указывают на умеренные симптомы депрессии. Возможно, вам стоит обратиться к специалисту.";
+    } else {
+      diagnosis = "Тяжелая депрессия";
+      description = "Ваши результаты указывают на выраженные симптомы депрессии. Рекомендуется обратиться за профессиональной помощью.";
+    }
+    document.getElementById('diagnosis-text').textContent = diagnosis;
+    document.getElementById('diagnosis-text').className = 'diagnosis ' + 
+        (totalScore <= 9 ? 'mild' : totalScore <= 15 ? 'moderate' : 'severe');
 
- if (currentQuestion<totalQuestions) {
-   currentQuestion++;
-   document.getElementById(`question${currentQuestion}`).classList.add('active');
-   updateProgress();
- } else {
-   showResult();
- }
-}
+    document.getElementById('result-description').textContent = description;
 
-// Показать результат теста
-function showResult() {
- const totalScore = scores.reduce((acc, val) => acc + val,0);
- let diagnosis="";
- if (totalScore <=4){
-   diagnosis= "У вас отсутствуют признаки депрессии.";
- } else if (totalScore <=8){
-   diagnosis= "Возможны признаки легкой депрессии.";
- } else if (totalScore <=12){
-   diagnosis= "Возможны признаки средней депрессии.";
- } else{
-   diagnosis= "Возможны признаки тяжелой депрессии.";
- }
+    // Показываем результаты
+    document.querySelectorAll('.question-container').forEach(q => q.style.display='none');
+    document.getElementById('result-container').style.display = 'block';
+  }
 
- document.getElementById("diagnosis-text").innerText=diagnosis;
+  function restartTest() {
+    // Очистка ответов
+    for (let i = 1; i <= totalQuestions; i++) {
+      const radios = document.getElementsByName(`q${i}`);
+      for (let radio of radios) {
+        radio.checked = false;
+      }
+    }
+    // Скрываем результаты
+    document.getElementById('result-container').style.display = 'none';
 
- // Показываем контейнер с результатом
- document.getElementById("result-container").style.display ="block";
+    // Показываем первый вопрос
+    document.getElementById('question1').style.display = 'block';
 
- // Скрываем все вопросы
- for(let i=1; i<=totalQuestions; i++){
-   document.getElementById(`question${i}`).style.display ="none";
- }
-}
+    // Обновляем прогресс
+    document.getElementById('progress').style.width = '0%';
 
-// Функция для перезапуска теста
-function restartTest() {
- currentQuestion=1;
- scores.length=0; // очищаем массив
-
- // Скрываем результат и показываем вопросы заново
- document.getElementById("result-container").style.display ="none";
-
- for(let i=1; i<=totalQuestions; i++){
-   const qDiv = document.getElementById(`question${i}`);
-   qDiv.style.display ="block";
-   qDiv.classList.remove('active');
- }
- document.getElementById(`question${currentQuestion}`).classList.add('active');
- updateProgress();
-}
+    // Очищаем ответы
+    for (let key in answers) delete answers[key];
+  }
 </script>
 
 </body>
