--- a/test.html
+++ b/test.html
@@ -146,6 +146,12 @@
     <div class="progress-bar">
         <div class="progress" id="progress"></div>
     </div>
+<!-- Нижняя панель с иконками без фона -->
+<div class="bottom-nav">
+ <button class="icon-btn"><i class="fas fa-cog"></i></button>
+ <button class="icon-btn"><i class="fas fa-search"></i></button>
+ <button class="icon-btn"><i class="fas fa-user"></i></button>
+</div>
 
     <!-- Контейнеры с вопросами -->
     <div id="question1" class="question-container active">
