--- a/test.html
+++ b/test.html
@@ -28,12 +28,14 @@
         .option {
             margin: 15px 0;
             padding: 12px;
-            background: #f9f9f9;
-            border-radius: 5px;
+             background: rgba(255, 255, 255, 0.5);
+            border-radius: 45px;
             cursor: pointer;
             display: block;
             position: relative;
             padding-left: 40px;
+            width: 345px;
+            height: 90px;
         }
         .option:hover {
             background: #e9e9e9;
