--- a/test.html
+++ b/test.html
@@ -32,6 +32,10 @@
             border-radius: 45px;
             cursor: pointer;
             display: flex;
+               align-items: center; /* Вертикальное центрирование */
+    justify-content: center; /* Горизонтальное центрирование */
+    font-size: 20px; /* Подберите подходящий размер шрифта */
+    line-height: 90px;
             position: relative;
             padding-left: 40px;
             width: 345px;
