--- a/test.html
+++ b/test.html
@@ -57,12 +57,15 @@
             background: #4CAF50;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 45px;
             cursor: pointer;
             font-size: 16px;
             margin-top: 20px;
             display: block;
             width: 100%;
+                width: 210px;
+    height: 60px;
+    background: rgba(255, 255, 255, 0.5);
         }
         button:hover {
             background: #45a049;
